made simpler dhasbords

--- a/Leaders-email-alert.html
+++ b/Leaders-email-alert.html
@@ -142,7 +142,8 @@ a{color:inherit;text-decoration:none;}
     <a href="Leaders-dahsboard.html" class="nav-link">Dashboard</a>
     <a href="Leaders-datastory.html" class="nav-link">Portfolio Briefing</a>
     <a href="Leaders-email-alert.html" class="nav-link active">Alert Email</a>
-    <a href="index.html" class="nav-link">Principal View</a>
+    <a href="index.html" class="nav-link">Principal Dashboard</a>
+    <a href="principal-datastory.html" class="nav-link">Principal Briefing</a>
   </div>
 </nav>
 
