--- a/principal-datastory.html
+++ b/principal-datastory.html
@@ -140,7 +140,8 @@
   <div style="display:flex;gap:6px;">
     <a href="principal-datastory.html" class="active">Data Story</a>
     <a href="principal-email-alert.html">Alert Email</a>
-    <a href="principal-dashboard.html">Full Dashboard</a>
+    <a href="index.html">Principal Dashboard</a>
+    <a href="Leaders-dahsboard.html">Leadership View ↗</a>
   </div>
 </div>
 
