--- a/principal-datastory.html
+++ b/principal-datastory.html
@@ -177,10 +177,10 @@
     <div class="mc-value amber">29</div>
     <div class="mc-delta">Benchmark 35 · Flat YoY</div>
   </div>
-  <div class="metric-cell alert alert-green">
-    <div class="mc-label">Capacity Used</div>
-    <div class="mc-value teal">80.5%</div>
-    <div class="mc-delta"><span class="up">↑</span> Forecast was 73.7%</div>
+  <div class="metric-cell alert alert-red">
+    <div class="mc-label">A-Level Top Grades</div>
+    <div class="mc-value red">52.7%</div>
+    <div class="mc-delta"><span class="dn">↓ 13.3pt</span> from 66% last year</div>
   </div>
 </div>
 
